# algorithm_testing

./: .gitignore  Cargo.toml  file_namer.sh  snaking.sh
advent-of-code/: Cargo.toml
advent-of-code/benches/: aoc_2022_full_of_hot_air.rs
advent-of-code/files/: distress_signal.txt
advent-of-code/fuzz/: Cargo.toml
advent-of-code/fuzz/fuzz_targets/: aoc_2022_full_of_hot_air_fuzz.rs
advent-of-code/src/: aoc_2021.rs  aoc_2022.rs  aoc_2023.rs  chiton.rs  dumbo_octopus.rs  extended_polymerization.rs  lanternfish.rs  lib.rs  packet_decoder.rs  passage_pathing.rs  transparent_origami.rs  utils.rs
advent-of-code/src/aoc_2021/: chiton.rs  dumbo_octopus.rs  extended_polymerization.rs  packet_decoder.rs  passage_pathing.rs  smoke_basin.rs  transparent_origami.rs
advent-of-code/src/aoc_2022/: beacon_exclusion_zone.rs  boiling_boulders.rs  calorie_counting.rs  camp_cleanup.rs  cathode_ray_tube.rs  distress_signal.rs  full_of_hot_air.rs  grove_positioning_system.rs  hill_climbing_algorithm.rs  monkey_in_the_middle.rs  monkey_math.rs  no_space_left_on_device.rs  proboscidea_volcanium.rs  pyroclastic_flow.rs  regolith_reservoir.rs  rock_paper_scissors.rs  rope_bridge.rs  rucksack_reorganization.rs  supply_stacks.rs  treetop_tree_house.rs  tuning_trouble.rs  unstable_diffusion.rs
advent-of-code/src/aoc_2023/: camel_cards.rs  cosmic_expansion.rs  cube_conundrum.rs  gear_ratios.rs  haunted_wasteland.rs  if_you_give_a_seed_a_fertilizer.rs  mirage_maintenance.rs  pipe_maze.rs  scratchcards.rs  trebuchet.rs  wait_for_it.rs
algorithms/: Cargo.toml
algorithms/src/: lib.rs
leetcode/: Cargo.toml
leetcode/src/: easy.rs  hard.rs  lib.rs  medium.rs
services/src/: unsigned_counter.rs  vector_2d.rs
src/: lib.rs  main.rs  services.rs
src/advent_of_code/: binary_diagnostic.rs  dive.rs  dumbo_octopus.rs  giant_squid.rs  hydrothermal_venture.rs  lanternfish.rs  mod.rs  smoke_basin.rs  sonar_sweep.rs  syntax_scoring.rs
src/array_2d/: iter.rs  mod.rs  ops.rs
src/binary_tree/: iter.rs  mod.rs
src/codechef/: different_string.rs  maximum_tree_jumps.rs  (+3 more)
(+857 files in other folders)
