[package]
name = "algorithm_testing"
version = "0.1.0"
edition = "2018"
default-run = "main"

[lib]
name = "algorithms"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.9"
rand = "0.8.0"
lazy_static = "1.4.0"
