[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
derive_more = { version = "0.99.17", default-features = false, features = ["deref"] }
itertools = "0.10.5"
keyed_priority_queue = "0.4.1"
nom = "7.1.1"
once_cell = "1.16.0"
rayon = "1.6.1"
structstruck = "0.3.0"
